Rename navbar brand from 'Oona Clone' to 'Web App Clone'

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <nav class="navbar navbar-light bg-light px-4">
-        <a class="navbar-brand" href="#">Oona Clone</a>
+        <a class="navbar-brand" href="#">Web App Clone</a>
         <button class="btn btn-primary" id="buy-now-nav">Buy Insurance</button>
     </nav>
 
