--- a/index.html
+++ b/index.html
@@ -43,7 +43,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </div>
+    <div class="container text-center py-5 bg-light mt-4">
+    <h3>Test a Successful Purchase</h3>
+    <button class="btn btn-success btn-lg" id="purchase-btn">Simulate $500 Car Insurance Purchase</button>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+  document.getElementById('purchase-btn').addEventListener('click', function() {
+    window.dataLayer = window.dataLayer || [];
+    window.dataLayer.push({
+      'event': 'purchase_complete',
+      'transaction_id': 'T_' + Math.floor(Math.random() * 1000),
+      'value': 500.00,
+      'currency': 'PHP',
+      'policy_type': 'Comprehensive Car Insurance'
+    });
+    alert('Data Layer Pushed! Check GTM Preview.');
+  });
+</script>
 </body>
 </html>
